--- a/spring-kafka/src/main/resources/application.yml
+++ b/spring-kafka/src/main/resources/application.yml
@@ -3,6 +3,6 @@ spring:
     producer: # See the list of Spring Kafka properties at: https://docs.spring.io/spring-boot/appendix/application-properties/index.html#application-properties.integration.spring.kafka.producer.bootstrap-servers
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     template:
       default-topic: order-tracking-topic
