Need consumer group ID and JSON value type because not using our own typed ObjectMapper

--- a/spring-kafka/src/main/resources/application.yml
+++ b/spring-kafka/src/main/resources/application.yml
@@ -7,5 +7,8 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     consumer:
+      group-id: order-group # All consumers with the same group ID share messages
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.value.default.type: com.example.ordertrackingsystem.model.Order # Tells Spring what class to deserialize into (b/c we're not using our own custom typed ObjectMapper)
