--- a/spring-kafka/docker-compose.yml
+++ b/spring-kafka/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     image: confluentinc/cp-zookeeper:7.9.1
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
-
   kafka:
     image: confluentinc/cp-kafka:7.9.1
     ports:
@@ -12,4 +11,5 @@ services:
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      # Only use 1 broker because don't need data replication or high availability in local development
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
